# advent-of-code-2025

./: .gitignore  README.md  pyproject.toml
solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
