[project]
name = "advent-of-code-2025"
version = "0.0.0"
description = "My solutions for Advent of Code 2025"
authors = ["Denis Washington <denis@denisw.de>"]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ruff>=0.14.7",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

